Bug 1536237 - Add support for letter spacing in Font Editor. r=gl
- Reads the value for the letter-spacing CSS property and shows it in the Font Editor. When it is default, show the "normal" identifier. As soon as the user tries to edit it using the value slider, switch to an em-based value.

- Tweaks the unit conversion method to support letter-spacing: using correct reference node for em units, returning high-precision results even for pixels (allow sub-pixel precision)

Differential Revision: https://phabricator.services.mozilla.com/D25087

UltraBlame original commit: e78a1f8b81db22f436bcecc335b39f105ff772f8

--- a/devtools/client/themes/fonts.css
+++ b/devtools/client/themes/fonts.css
@@ -1533,6 +1533,43 @@ none
 ;
 }
 .
+font
+-
+value
+-
+label
+{
+width
+:
+calc
+(
+60px
++
+3
+.
+8em
+)
+;
+margin
+-
+left
+:
+10px
+;
+padding
+-
+top
+:
+2px
+;
+padding
+-
+bottom
+:
+4px
+;
+}
+.
 theme
 -
 dark
